<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>tools.vitruv.compmodelcons</groupId>
        <artifactId>tools.vitruv.compmodelcons</artifactId>
        <version>0.1.0-SNAPSHOT</version>
    </parent>

    <artifactId>tools.vitruv.compmodelcons.generator</artifactId>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>tools.vitruv.compmodelcons</groupId>
            <artifactId>tools.vitruv.compmodelcons.views</artifactId>
            <version>0.1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>tools.vitruv.compmodelcons</groupId>
            <artifactId>tools.vitruv.compmodelcons.change</artifactId>
            <version>0.1.0-SNAPSHOT</version>
        </dependency>

        <!-- Vitruvius dependencies -->
        <dependency>
            <groupId>tools.vitruv</groupId>
            <artifactId>tools.vitruv.dsls.common</artifactId>
            <version>${vitruv.version}</version>
        </dependency>

        <!-- NeoJoin dependencies -->
        <dependency>
            <groupId>tools.vitruv</groupId>
            <artifactId>tools.vitruv.neojoin.model</artifactId>
            <version>0.1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>tools.vitruv</groupId>
            <artifactId>tools.vitruv.neojoin.frontend.language</artifactId>
            <version>0.1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>tools.vitruv</groupId>
            <artifactId>tools.vitruv.neojoin.emf.transformation</artifactId>
            <version>0.1.0-SNAPSHOT</version>
        </dependency>

        <!-- Eclipse dependencies -->
        <dependency>
            <groupId>org.eclipse.emf</groupId>
            <artifactId>org.eclipse.emf.mwe2.runtime</artifactId>
            <version>2.26.0</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.xtext</groupId>
            <artifactId>org.eclipse.xtext.xtext.generator</artifactId>
            <version>2.43.0</version>
        </dependency>

        <!-- JUnit dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-commons</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>